@@ -13,7 +13,7 @@
 \documentclass{article} % article is NOT the original style
 \usepackage[nofancy]{svninfo}% Access VCS information.
 \svnInfo $Id$
-\newcommand*{\mpversion}{1.203}
+\newcommand*{\mpversion}{1.204}
 
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
