@@ -36,15 +36,12 @@ diff $testdir/writeo.2 writeo.2
 $LN_S $testdir/trap.mp . || exit 1
 $LN_S $testdir/trap.mpx . || exit 1
 
-## Why is --jobname required? And why --ini?
 ./mpost --progname=inimpost --jobname=trap --ini <$testdir/mptrap1.in >mptrapin.fot
 mv trap.log mptrapin.log || exit 1
 diff $testdir/mptrapin.log mptrapin.log
 
 # Must run inimpost or font_name[null_font] is not initialized, leading to diffs.
 ./mpost --progname=inimpost --jobname=trap --memname=trap <$testdir/mptrap2.in >mptrap.fot
-
-## Here the test fails, but we just exit or 'make distcheck' would fail
 
 mv trap.log mptrap.log || exit 1
 mv trap.tfm mptrap.tfm || exit 1
@@ -60,7 +57,5 @@ diff $testdir/trap.197 trap.197
 diff $testdir/trap.200 trap.200
 
 ./tftopl ./mptrap.tfm mptrap.pl || exit 1
-diff $testdir/mptrap.pl mptrap.pl
-
-exit 0
+diff $testdir/mptrap.pl mptrap.pl || exit 1
 
